cmake_minimum_required(VERSION 3.30)
project(SchottenTotten_CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(SchottenTotten_CPP main.cpp
Cards/Cards.h
Cards/ClanCards.cpp
Cards/ClanCards.h
        Collections/Set.cpp
        Collections/Set.h
Colors.h
Cards/ShieldBear.h
Cards/Joker.h
Cards/Spy.h
Cards/RusesCards.h
Cards/MudFight.h
Cards/BlindMan.h
Cards/Banshee.h
Cards/Traitor.h
Cards/HeadsHunter.h
Rules/Rules.cpp
Rules/Rules.h
StoneTiles/StoneTiles.cpp
StoneTiles/StoneTiles.h
        Display.h
        DisplayConsole.cpp
        DisplayConsole.h
        TacticalCardsFactory.cpp
        TacticalCardsFactory.h
        Cards/Stratege.cpp
        Cards/Stratege.h
        Player/Player.h
        Player/Player.cpp
        Player/Human.h
        Player/Human.cpp
        Player/AI.h
        Player/AI.cpp
        Player/AIEasy.cpp
        Player/AIEasy.h
        Cards/Joker.cpp
        GameBoard.cpp
        DisplayManager.h
        DisplayManager.cpp
        Cards/Joker.cpp
        GameBoard.h
        GameBoard.cpp
        Cards/Traitor.cpp
        Cards/Banshee.cpp
Cards/tacticalCards.cpp
Cards/RusesCards.cpp
Cards/Recruiter.h
Cards/Recruiter.cpp
Cards/HeadsHunter.cpp
Cards/Spy.cpp)
